# token-tally

./: .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_analyzer.py  test_cli.py  test_models.py  test_storage.py
token_tally/: __init__.py  analyzer.py  cli.py  models.py  output.py  storage.py
