[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "token-tally"
version = "1.0.0"
description = "Track AI token usage and costs across OpenAI, Anthropic, and other providers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Edgar Ortega Ramirez"}]
dependencies = ["pydantic>=2.6.0", "rich>=13.7.0", "pyyaml>=6.0.1", "click>=8.1.7"]

[project.optional-dependencies]
dev = [
    "pytest>=9.1",
    "ruff>=0.15",
]
mcp = ["mcp>=1.0.0"]

[project.scripts]
token-tally = "token_tally.cli:main"

[project.urls]
Homepage = "https://github.com/EdgarOrtegaRamirez/token-tally"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
